# baobab-automata

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCUMENTATION_SUMMARY.md  Makefile  Makefile.ps1  README.md  bandit_report.json  debug_anbn_detailed.py  debug_anbn_fixed.py  debug_minimization.py  debug_pda.py  exemple_utilisation.py  exemple_utilisation_corrige.py  fix_all_imports.py  fix_imports.py  fix_remaining_imports.py  fix_test_imports.py  pyproject.toml  pytest.ini  test_correct_pda.py  test_corrected_pda.py  test_dfa_detailed.py  test_dfa_fixed.py  test_dfa_issue.py  test_wrapper_fixed.py
docs/: 000_DEVELOPMENT_CONSTRAINTS.md  000_DEV_DIARY.md  001_SPECIFICATIONS.md  Makefile  PRIORITY_NOTATION.md  conf.py  index.rst
docs/api/: algorithms.rst  automata.rst  contributing.rst  development.rst  exceptions.rst  index.rst  installation.rst  quickstart.rst  visualization.rst
docs/bandit/: .gitkeep
docs/detailed_specifications/: 001_001_PHASE_001_INFRASTRUCTURE_SETUP.md  001_PHASE_001_001_INFRASTRUCTURE_SETUP.md  001_PHASE_001_002_ABSTRACT_INTERFACES.md  001_PHASE_001_ABSTRACT_INTERFACES.md  001_PHASE_001_VALIDATION_SYSTEM.md  002_PHASE_002_004_CONVERSION_ALGORITHMS.md  002_PHASE_002_DFA_IMPLEMENTATION.md  002_PHASE_002_EPSILON_NFA_IMPLEMENTATION.md  002_PHASE_002_OPTIMIZATION_ALGORITHMS.md  003_PHASE_001_003_VALIDATION_SYSTEM.md  004_001_PHASE_001_TESTING_FRAMEWORK.md  004_PHASE_001_004_TESTING_FRAMEWORK.md  005_PHASE_002_001_DFA_IMPLEMENTATION.md  006_PHASE_002_002_NFA_IMPLEMENTATION.md  007_PHASE_002_004_EPSILON_NFA_IMPLEMENTATION.md  009_PHASE_002_006_REGEX_PARSER.md  010_PHASE_002_007_LANGUAGE_OPERATIONS.md  011_PHASE_002_008_OPTIMIZATION_ALGORITHMS.md  012_PHASE_002_008_BalancingStrategy.md  012_PHASE_002_009_DEPENDENCY_ANALYSIS.md  013_PHASE_002_009_AVLOptimizations.md  013_PHASE_003_001_PDA_IMPLEMENTATION.md  014_PHASE_003_002_DPDA_IMPLEMENTATION.md  015_PHASE_003_003_NPDA_IMPLEMENTATION.md  016_PHASE_003_004_GRAMMAR_PARSER.md  017_PHASE_003_005_CONVERSION_ALGORITHMS.md  018_PHASE_003_006_SPECIALIZED_ALGORITHMS.md  019_PHASE_003_007_OPTIMIZATION_ALGORITHMS.md  020_PHASE_004_001_TM_IMPLEMENTATION.md  021_PHASE_004_002_DTM_IMPLEMENTATION.md  022_PHASE_004_003_NTM_IMPLEMENTATION.md  023_PHASE_004_004_MULTITAPE_IMPLEMENTATION.md  024_PHASE_004_005_CONVERSION_ALGORITHMS.md  025_PHASE_004_006_COMPLEXITY_ANALYSIS.md  102_002_PHASE_002_NFA_IMPLEMENTATION.md  104_002_PHASE_002_CONVERSION_ALGORITHMS.md  105_002_PHASE_002_REGEX_PARSER.md  106_002_PHASE_002_LANGUAGE_OPERATIONS.md  108_002_PHASE_002_DEPENDENCY_ANALYSIS.md
docs/examples/: advanced_algorithms.rst  conversion_algorithms.rst  finite_automata.rst  index.rst  language_recognition.rst  pushdown_automata.rst  turing_machines.rst  visualization_examples.rst
docs/phases/: 001_PHASE_001.md  002_PHASE_002.md  003_PHASE_003.md  004_PHASE_004.md  005_PHASE_005.md  006_PHASE_006.md  007_PHASE_007.md
scripts/: create_specification.py  list_specifications.py
scripts/debug/: debug_anbn.py  debug_anbn_detailed.py  debug_anbn_fixed.py  debug_dpda.py  debug_dpda_detailed.py  debug_dpda_working.py  debug_palindrome.py  debug_pda.py  debug_pda_detailed.py  debug_simple.py  debug_simple_working.py  debug_simulation.py
scripts/demos/: demo_conversion_algorithms.py
scripts/tests/: test_correct_pda.py  test_corrected_pda.py  test_stack_operations.py
src/baobab_automata/: __init__.py  convenience_functions.py
src/baobab_automata/algorithms/: __init__.py  dependency_analysis.py
src/baobab_automata/core/: __init__.py
src/baobab_automata/exceptions/: __init__.py  base.py  dtm_exceptions.py  multitape_tm_exceptions.py  ntm_exceptions.py  tm_exceptions.py
src/baobab_automata/finite/: __init__.py  abstract_finite_automaton.py  avl_structures.py  conversion_algorithms.py  dfa.py  dfa_exceptions.py  epsilon_nfa.py  epsilon_nfa_exceptions.py  language_operations.py  language_operations_exceptions.py  mapping.py  nfa.py  nfa_exceptions.py  operation_stats.py  optimization_algorithms.py  optimization_exceptions.py  regex_ast.py  regex_exceptions.py  regex_parser.py  regex_token.py  transition_change.py
src/baobab_automata/implementations/: state.py  transition.py
src/baobab_automata/pushdown/: pda.py  (+13 more)
tests/: __init__.py  conftest.py
tests/baobab_automata/: __init__.py
tests/finite/: __init__.py  test_avl_optimizations.py  test_conversion_algorithms.py  test_dfa.py  test_epsilon_nfa.py  test_language_operations.py  test_mapping.py  test_nfa.py  test_operation_stats.py  test_optimization_algorithms.py  test_regex_parser.py
tests/integration/: __init__.py  test_integration.py
tests/performance/: __init__.py  test_performance.py
tests/pushdown/: test_conversion_algorithms.py  test_dpda.py  test_grammar_parser.py  test_npda.py  test_optimization_algorithms.py  test_pda.py  test_specialized_algorithms.py
tests/turing/: test_multitape_tm.py  test_ntm.py  test_ntm_integration.py  test_tm.py
tests/unit/: __init__.py  test_algorithms_basic.py  test_base_exceptions.py  test_context_free_basic.py  test_context_sensitive_basic.py  test_conversion_algorithms.py  test_conversion_algorithms_extended.py  test_dfa.py  test_dfa_simple.py  test_docs_basic.py  test_epsilon_nfa.py  test_epsilon_nfa_basic.py  test_epsilon_nfa_exceptions.py  test_exceptions_basic.py  test_implementations_basic.py  test_interfaces_basic.py  test_language_operations.py  test_language_operations_basic.py  test_language_operations_extended.py  test_low_coverage_modules.py  test_mapping.py  test_nfa.py  test_nfa_basic.py  test_nfa_exceptions.py  test_operation_stats.py  test_optimization_algorithms.py  test_optimization_algorithms_extended.py  test_optimization_algorithms_simple.py  test_optimization_exceptions.py  test_pushdown_basic.py  test_pushdown_configurations.py  test_pushdown_conversion_algorithms.py  test_pushdown_exceptions_extended.py  test_pushdown_grammar_types.py  test_pushdown_modules_simple.py  test_pushdown_operations.py  test_pushdown_optimization_algorithms.py  test_pushdown_simple.py  test_regex_ast.py  test_regex_exceptions.py  (+8 more)
(+196 files in other folders)
